fix: spacing on top bottom

--- a/app/javascript/stylesheets/form/edit_user.scss
+++ b/app/javascript/stylesheets/form/edit_user.scss
@@ -4,7 +4,6 @@ form.edit_user {
 
 .dashboard-edit-user-details {
     &__title {
-        font-weight: 600;
         color: var(--color-text-inverse);
     }
 
